--- a/webpack/06-module/lerna.json
+++ b/webpack/06-module/lerna.json
@@ -1,6 +1,6 @@
 {
   "publish": {
-    "ignoreChanges": [ "test/*" ]
+    "ignoreChanges": [ "test/*", "test*/*" ]
   },
   "packages": [
     "packages/*"
